--- a/src/XSocketsClient/XSocketsClient/XSocketsClient.csproj
+++ b/src/XSocketsClient/XSocketsClient/XSocketsClient.csproj
@@ -39,6 +39,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <Prefer32Bit>false</Prefer32Bit>
+    <DocumentationFile>bin\Release\XSocketsClient.xml</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
