--- a/src/XSocketsClient/XSocketsClient.Net45/XSocketsClient.Net45.csproj
+++ b/src/XSocketsClient/XSocketsClient.Net45/XSocketsClient.Net45.csproj
@@ -44,6 +44,7 @@
     </Compile>
     <Compile Include="ClientPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SocketWrapper2.cs" />
     <Compile Include="Wrapper\SocketWrapper.cs" />
     <Compile Include="Wrapper\SslStreamWrapper.cs" />
   </ItemGroup>
