--- a/src/XSocketsClient/packages/repositories.config
+++ b/src/XSocketsClient/packages/repositories.config
@@ -2,6 +2,11 @@
 <repositories>
   <repository path="..\Samples.Web\packages.config" />
   <repository path="..\StockTickerClient\packages.config" />
+  <repository path="..\XSocketsClient.Android\packages.config" />
+  <repository path="..\XSocketsClient.iOS\packages.config" />
+  <repository path="..\XSocketsClient.Net45\packages.config" />
+  <repository path="..\XSocketsClient.Phone\packages.config" />
+  <repository path="..\XSocketsClient.Store\packages.config" />
   <repository path="..\XSocketsClient.Test\packages.config" />
   <repository path="..\XSocketsClient\packages.config" />
 </repositories>
