--- a/src/XSocketsClient/XSocketsClient.Net45/XSocketsClient.Net45.csproj
+++ b/src/XSocketsClient/XSocketsClient.Net45/XSocketsClient.Net45.csproj
@@ -30,8 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Nito.AsyncEx">
+      <HintPath>..\packages\Nito.AsyncEx.2.1.3\lib\net45\Nito.AsyncEx.dll</HintPath>
+    </Reference>
+    <Reference Include="Nito.AsyncEx.Concurrent">
+      <HintPath>..\packages\Nito.AsyncEx.2.1.3\lib\net45\Nito.AsyncEx.Concurrent.dll</HintPath>
+    </Reference>
+    <Reference Include="Nito.AsyncEx.Enlightenment">
+      <HintPath>..\packages\Nito.AsyncEx.2.1.3\lib\net45\Nito.AsyncEx.Enlightenment.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,7 +54,6 @@
     </Compile>
     <Compile Include="ClientPool.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SocketWrapper2.cs" />
     <Compile Include="Wrapper\SocketWrapper.cs" />
     <Compile Include="Wrapper\SslStreamWrapper.cs" />
   </ItemGroup>
@@ -53,6 +62,12 @@
       <Project>{194487ab-bf7b-4a49-a2f0-62f983b0a94e}</Project>
       <Name>XSocketsClient</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
