--- a/src/XSocketsClient/XSocketsClient.Store/XSocketsClient.Store.csproj
+++ b/src/XSocketsClient/XSocketsClient.Store/XSocketsClient.Store.csproj
@@ -117,6 +117,20 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wrapper\SocketWrapper.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Nito.AsyncEx">
+      <HintPath>..\packages\Nito.AsyncEx.2.1.3\lib\win8\Nito.AsyncEx.dll</HintPath>
+    </Reference>
+    <Reference Include="Nito.AsyncEx.Concurrent">
+      <HintPath>..\packages\Nito.AsyncEx.2.1.3\lib\win8\Nito.AsyncEx.Concurrent.dll</HintPath>
+    </Reference>
+    <Reference Include="Nito.AsyncEx.Enlightenment">
+      <HintPath>..\packages\Nito.AsyncEx.2.1.3\lib\win8\Nito.AsyncEx.Enlightenment.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '12.0' ">
     <VisualStudioVersion>12.0</VisualStudioVersion>
   </PropertyGroup>
